# orchflow

./: .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  README.md  devsetup.sh  pyproject.toml
.github/: bandit.yaml  pinned-versions.env
.github/workflows/: ci.yml  publish-pypi.yml  security.yml
docs/: COOKBOOK.md  LAUNCH.md
drafts/: latest.md
examples/: _runner.py  run_json.py  run_python.py  run_yaml.py  tasks.py
examples/workflows/: daily_report.json  daily_report.yaml
modelprovider/: bedrockclient.py  bedrockruntimeclient.py
modelprovider/runtime/: __init__.py  parsing.py  types.py
scripts/: builddocker.sh  dev_run_trade_memo.sh
src/: dagbuilder.py  executor.py  registerfuncs.py  registry.py
src/models/: promptmodel.py  roles.py
src/orchflow/: __init__.py  cli.py  envconfig.py
src/orchflow/evals/: checks.py  names.py  offline.py  record.py  runwithevals.py  turn.py  verdict.py
src/orchflow/examples/: __init__.py  compare_runner.py  evals.py  models.py  runner.py  simple_evals.py  simple_summary.py  trade_memo.py
src/orchflow/providers/aws/: bedrock.py  bedrockruntime.py  converse_with_evals.py  messages.py
src/orchflow/security/: __init__.py  bandit.py  trivy.py
src/ui/: __main__.py  app.py  service.py  store.py
src/ui/static/: dashboard.css  dashboard.js
src/ui/templates/: dashboard.html
tests/: conftest.py  test_bandit_cli.py  test_checks.py  test_cli.py  test_compare.py  test_dagbuilder.py  test_examples.py  test_executor.py  test_integration.py  test_offline.py  test_packaging.py  test_panels.py  test_registerfuncs.py  test_registry.py  test_roles.py  test_trace.py  test_trace_io.py  test_trivy_cli.py  test_turn.py  test_ui.py  test_ui_service.py  test_verdict.py
tests/fixtures/: json_good.json  simple_bad.md  simple_good.md
utils/: config.py  log.py
