[project]
name = "orchflow"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.6.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "black>=26.5.1",
]
tests = [
    "pytest>=9.1.1",
    "syrupy>=5.3.4",
    "httpx>=0.28.1",
]
precommit = [
    "pre-commit>=4.6.0",
    "black>=26.5.1",
    "pytest>=9.1.1",
]
ui = [
    "fastapi>=0.135.3",
    "uvicorn>=0.41.0",
    "jinja2>=3.1.6",
]
aws = [
    "boto3>=1.43.36",
    "boto3-stubs[bedrock,bedrock-runtime]>=1.43.36",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
target-version = ["py312"]
line-length = 88
